lab6: Fix text not cleared when sent. Fix text overflow in line.

--- a/lab6/style.css
+++ b/lab6/style.css
@@ -112,8 +112,6 @@ textarea {
 }
 
 .entry {
-    /*width: 100%;*/
-    height: 60px;
     border-bottom: solid 1px #CCCCCC;
     margin: 15px;
 
@@ -121,9 +119,8 @@ textarea {
 
 .avatar {
     background: url("img/user.jpg") no-repeat;
-    width: 7%;
-    height: 100%;
-    /*margin: 10px;*/
+    width: 60px;
+    height: 60px;
     display: inline-block;
 }
 
@@ -134,7 +131,7 @@ textarea {
 }
 
 .text {
-    height: 35px;
+    margin-bottom: 10px;
 }
 
 .name {
@@ -142,7 +139,7 @@ textarea {
 }
 
 .message {
-    /*width: 100%;*/
+    word-break: break-all;
 }
 
 .side {
